<resources>
    <string name="app_name">Chronicle Audiobook Player</string>
    <string name="available_offline">Available offline</string>
    <string name="disable_offline_mode">Disable offline mode</string>
    <string name="search">Search</string>
    <string name="no_books_found">No books found</string>
    <string name="no_downloaded_books_found">No downloaded books found</string>
    <string name="search_hint">Search</string>
    <string name="not_connected">No network connection</string>
    <string name="tab_home">Home</string>
    <string name="tab_library">Library</string>
    <string name="tab_settings">Settings</string>
    <string name="login_with_plex">Login with Plex</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_succeeded">Successfully logged in!</string>
    <string name="plex_login">Plex Login</string>
    <string name="audio_server">Audio Server</string>
    <string name="choose_server">Choose Server</string>
    <string name="choose_library">Choose Library</string>
    <string name="choose_user">Choose User</string>
    <string name="unknown_library_name">Unknown</string>
    <string name="no_libraries_found">No libraries found</string>
    <string name="no_user_found">No users found</string>
    <string name="no_servers_found">No servers found</string>
    <string name="refresh_list">Refresh list</string>
    <string name="library_title">Library</string>
    <string name="filter">Filter</string>
    <string name="cast">Cast</string>
    <string name="toggle_library_sort_descending">Sort descending, click to toggle</string>
    <string name="toggle_library_sort_ascending">Sort ascending, click to toggle</string>
    <string name="not_played_dog_ear">Not played yet</string>
    <string name="sort_by">Sort by:</string>
    <string name="view_by">View:</string>
    <string name="view_by_book">Book</string>
    <string name="view_by_author">Author</string>
    <string name="view_by_folder">Folder</string>
    <string name="view_by_collection">Collections</string>
    <string name="done_filtering">Done</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_author">Author</string>
    <string name="sort_by_year">Year</string>
    <string name="sort_by_release_date">Release date</string>
    <string name="sort_by_date_added">Date added</string>
    <string name="sort_by_rating">Rating</string>
    <string name="sort_by_date_played">Date played</string>
    <string name="sort_by_plays">Plays</string>
    <string name="sort_by_duration">Duration</string>
    <string name="view_style">View style</string>
    <string name="view_style_book_cover">Book cover</string>
    <string name="view_style_text_list">Text</string>
    <string name="view_style_cover_and_text_list">Details</string>
    <string name="hide_played_switch">Hide played audiobooks?</string>
    <string name="audiobook_info">Audiobook info</string>
    <string name="chapters">Chapters</string>
    <string name="disc_number">Disc %1$s</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="no_tracks_found">No tracks found</string>
    <string name="download">Download</string>
    <string name="downloading_book">Downloading book</string>
    <string name="failed_to_connect_to_server">Can\'t connect to server</string>
    <string name="prompt_mark_as_played">Mark as played?</string>
    <string name="prompt_mark_as_unplayed">Mark as unplayed?</string>
    <string name="marked_as_played">Marked audiobook as played.</string>
    <string name="marked_as_unplayed">Marked audiobook as unplayed.</string>
    <string name="cannot_play_media_no_server">Cannot play media- not connected to any server!</string>
    <string name="prompt_mark_as_unwatched">Mark as unwatched?</string>
    <string name="failed_to_sync_progress">Failed to sync progress</string>
    <string name="premium_required_offline_playback">Premium is required for offline playback!</string>
    <string name="unable_to_cache_audiobook">Unable to download audiobook- not connected to server</string>
    <string name="force_sync">Force Sync</string>
    <string name="prompt_force_sync">Force sync with network? Local progress will be lost</string>
    <string name="progress_sync_successful">Sync successful!</string>
    <string name="progress_sync_failed">Sync failed</string>
    <string name="cannot_sync_no_server">Not connected to server</string>
    <string name="home">Home</string>
    <string name="recently_listened">Recently listened</string>
    <string name="recently_added">Recently added</string>
    <string name="notification_channel">Now playing</string>
    <string name="notification_channel_description">Shows currently playing music</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="skip_to_previous">Skip to previous track/chapter</string>
    <string name="skip_to_next">Skip to next track/chapter</string>
    <string name="skip_forwards">Skip forwards</string>
    <string name="skip_forwards_reached_last_chapter">You already reached the last chapter/track</string>
    <string name="skip_backwards">Skip backwards</string>
    <string name="pause_play_button">Pause/Play button</string>
    <string name="warning_jump_to_chapter_will_clear_progress">This will clear your saved progress. Continue?</string>
    <string name="playback_error">Playback error: %1$s</string>
    <string name="playback_error_401">Playback error (401): Not authorized</string>
    <string name="playback_error_503">Playback error (503): Server unavailable</string>
    <string name="playback_error_404">Playback error (404): Track not found</string>
    <string name="download_all">Download all</string>
    <string name="download_all_prompt">Download will use %1$s. %2$s available</string>
    <string name="delete_cache_files_prompt">Delete cached files?</string>
    <string name="download_failed">Download failed for %1$s %2$s</string>
    <string name="download_failed_reason_already_exists">because the download already exists</string>
    <string name="download_failed_reason_error_code">Error code: %1$s</string>
    <string name="download_notification_channel_id">Download</string>
    <string name="download_notification_title">Downloading %1$s</string>
    <string name="download_notification_cancel">Cancel</string>
    <string name="download_notification_cancel_all">Cancel all</string>
    <string name="download_starting">Downloading %1$s: (%2$s%%)</string>
    <string name="download_successful_notification_content">Download complete: %1$s</string>
    <string name="download_successful_notification_title">Download finished</string>
    <string name="download_failed_notification_title">Download failed</string>
    <string name="download_failed_notification_content">Download failed: %1$s</string>
    <string name="downloads_completed_summary_mixed">Downloads completed, %1$d succeeded, %2$d failed</string>
    <plurals name="downloads_failed_summary">
        <item quantity="one">Download failed</item>
        <item quantity="other">Downloads failed</item>
    </plurals>
    <plurals name="downloads_complete_summary">
        <item quantity="one">Download complete</item>
        <item quantity="other">Downloads complete</item>
    </plurals>
    <plurals name="download_books_summary">
        <item quantity="one">Downloading %1$d book</item>
        <item quantity="other">Downloading %1$d books</item>
    </plurals>
    <string name="download_channel_description">Shows current downloads</string>
    <string name="moving_files_title">Moving files: (%1$d/%2$d)</string>
    <string name="moving_files_channel_name">Moving files</string>
    <string name="moving_files_failed_title">Failed to move</string>
    <string name="playback_speed_desc">Playback speed: %1$s times normal speed</string>
    <string name="playback_speed_title">Playback speed</string>
    <string name="playback_speed_0_5x">0.5x</string>
    <string name="playback_speed_0_7x">0.7x</string>
    <string name="playback_speed_1_0x">1.0x</string>
    <string name="playback_speed_1_2x">1.2x</string>
    <string name="playback_speed_1_5x">1.5x</string>
    <string name="playback_speed_1_7x">1.7x</string>
    <string name="playback_speed_2_0x">2.0x</string>
    <string name="playback_speed_3_0x">3.0x</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="sleep_timer_active_title">Sleep timer: %1$s remaining</string>
    <string name="sleep_timer_duration_5_minutes">5 minutes</string>
    <string name="sleep_timer_duration_15_minutes">15 minutes</string>
    <string name="sleep_timer_duration_30_minutes">30 minutes</string>
    <string name="sleep_timer_duration_40_minutes">40 minutes</string>
    <string name="sleep_timer_duration_60_minutes">60 minutes</string>
    <string name="sleep_timer_duration_90_minutes">90 minutes</string>
    <string name="sleep_timer_duration_120_minutes">120 minutes</string>
    <string name="sleep_timer_duration_end_of_chapter">End of chapter</string>
    <string name="sleep_timer_append">+5 minutes</string>
    <string name="cancel">Cancel</string>
    <string name="sleep_timer_extended_message">Sleep timer extended</string>
    <string name="tap_to_close_opened_menu">Tap to close opened menu</string>
    <string name="empty_string" />
    <string name="settings_category_sync">Sync</string>
    <string name="settings_sync_location_value">Sync location: %1$s</string>
    <string name="settings_sync_location_title">Sync location</string>
    <string name="settings_sync_space_available">%1$s: %2$s free</string>
    <string name="settings_sync_location_explanation">Choose where synced books will be stored</string>
    <string name="settings_delete_synced_title">Deleted synced files</string>
    <string name="settings_delete_synced_explanation">Remove all downloaded files from your device</string>
    <string name="settings_delete_synced_confirm">Delete all downloaded files?</string>
    <string name="settings_delete_synced_response">Deleted %1$s cached files</string>
    <string name="settings_offline_mode_title">Offline Mode</string>
    <string name="settings_refresh_rate_always">Always refresh</string>
    <string name="settings_refresh_rate_value">Refresh frequency: %1$s</string>
    <string name="settings_refresh_rate_title">Refresh frequency</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="settings_refresh_rate_explanation">Chronicle will wait this long before automatically refreshing</string>
    <string name="settings_refresh_rate_15_minutes">15 minutes</string>
    <string name="settings_refresh_rate_1_hour">1 hour (default)</string>
    <string name="settings_refresh_rate_3_hours">3 hours</string>
    <string name="settings_refresh_rate_6_hours">6 hours</string>
    <string name="settings_refresh_rate_1_day">1 day</string>
    <string name="settings_refresh_rate_3_days">3 days</string>
    <string name="settings_refresh_rate_1_week">1 week</string>
    <string name="settings_refresh_rate_manual">Manual refresh only</string>
    <string name="settings_refresh_rate_manual_explanation">Library will only refresh when user chooses to refresh</string>
    <string name="settings_refresh_rate_always_explanation">Library will refresh every time the app is opened</string>
    <string name="settings_book_cover_type_value">Book cover style: %1$s</string>
</resources>