<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/download_all"
        android:icon="@drawable/ic_cloud_download_white"
        android:title="@string/download_all"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_list_white"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
</menu>
