<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="chooseServerViewModel"
            type="io.github.mattpvaughn.chronicle.features.login.ChooseServerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.chooselibrary.ChooseServerActivity">

        <TextView
            android:id="@+id/choose_server_title"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/screen_horizontal_padding"
            android:layout_marginTop="@dimen/app_bar_height"
            android:layout_marginRight="@dimen/screen_horizontal_padding"
            android:text="@string/choose_server"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="@dimen/list_icon_size"
            android:onClick="@{() -> chooseServerViewModel.refresh()}"
            android:layout_height="@dimen/list_icon_size"
            app:layout_constraintBottom_toBottomOf="@id/choose_server_title"
            android:layout_marginLeft="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="@id/choose_server_title"
            app:layout_constraintLeft_toRightOf="@id/choose_server_title"
            android:src="@drawable/ic_refresh_white"
            android:contentDescription="@string/refresh_list" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/server_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/screen_horizontal_padding"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/screen_horizontal_padding"
            android:layout_marginBottom="@dimen/screen_vertical_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_server_title"
            app:listData="@{chooseServerViewModel.servers}"
            app:loadingStatus="@{chooseServerViewModel.loadingStatus}"
            tools:listitem="@layout/list_item_library" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_servers_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_server_title"
            app:loadingStatus="@{chooseServerViewModel.loadingStatus}" />

        <ProgressBar
            android:id="@+id/loading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_server_title"
            app:loadingStatus="@{chooseServerViewModel.loadingStatus}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>